fix: Use same properties for Native Kafka that are used for Confluent Kafka (#2482)